# PackBoost

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt  toy.ipynb  toy_fold_specs.ipynb  toy_sample_weights.ipynb
benchmarks/: analyze_benchmark.py  benchmark_kernels.py
benchmarks/results/: reference.csv
packboost/: callback.py  core.py  fold_aggregation.py
packboost/cuda/: __init__.py  adv.cu  cut.cu  cut_des.cu  encode_cuts.cu  et_sample_1b.cu  h.cu  h0.cu  h0_des.cu  h_des.cu  kernels.cpp  prep_vars.cu  repack.cu
tests/: conftest.py  test_cpu_gpu_parity.py  test_cuda_kernels.py  test_encode_cuts.py  test_et_sample_1b.py  toy_sample_weights.ipynb
